--- a/src/vstboard/mainwindow.ui
+++ b/src/vstboard/mainwindow.ui
@@ -291,7 +291,7 @@
             <bool>true</bool>
            </property>
            <property name="frameShape">
-            <enum>QFrame::StyledPanel</enum>
+            <enum>QFrame::NoFrame</enum>
            </property>
            <property name="editTriggers">
             <set>QAbstractItemView::NoEditTriggers</set>
@@ -364,6 +364,9 @@
            </property>
            <property name="acceptDrops">
             <bool>true</bool>
+           </property>
+           <property name="frameShape">
+            <enum>QFrame::NoFrame</enum>
            </property>
            <property name="editTriggers">
             <set>QAbstractItemView::NoEditTriggers</set>
