--- a/src/vstboard/views/programlist.ui
+++ b/src/vstboard/views/programlist.ui
@@ -32,7 +32,7 @@
       <bool>true</bool>
      </property>
      <widget class="QWidget" name="layoutWidget">
-      <layout class="QVBoxLayout" name="verticalLayout">
+      <layout class="QVBoxLayout" name="verticalLayout_4">
        <property name="spacing">
         <number>0</number>
        </property>
