--- a/src/vstboard/views/splash.ui
+++ b/src/vstboard/views/splash.ui
@@ -9,14 +9,28 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>330</width>
-    <height>158</height>
+    <width>346</width>
+    <height>257</height>
    </rect>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../../resources/resources.qrc">
+    <normaloff>:/vstboard32_8.png</normaloff>:/vstboard32_8.png</iconset>
   </property>
   <property name="locale">
    <locale language="English" country="UnitedStates"/>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="label">
+     <property name="pixmap">
+      <pixmap resource="../../resources/resources.qrc">:/vstboard logo2.png</pixmap>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::NoTextInteraction</set>
+     </property>
+    </widget>
+   </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="spacing">
@@ -228,7 +242,9 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../resources/resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
