translation packed in resources, the plugin is translated too
Signed-off-by: CtrlBrk <ctrlbrk76@gmail.com>

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -24,5 +24,7 @@
         <file>vstboard logo2.png</file>
         <file>vstboard48_8.png</file>
         <file>vstboard64_8.png</file>
+        <file>translations/vstboard_fr.qm</file>
+        <file>translations/qt_fr.qm</file>
     </qresource>
 </RCC>
