--- a/src/vstboard/views/filebrowser.ui
+++ b/src/vstboard/views/filebrowser.ui
@@ -79,6 +79,9 @@
      <property name="dragDropMode">
       <enum>QAbstractItemView::DragOnly</enum>
      </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::ExtendedSelection</enum>
+     </property>
      <attribute name="headerVisible">
       <bool>false</bool>
      </attribute>
