--- a/src/common/mainwindow.ui
+++ b/src/common/mainwindow.ui
@@ -108,7 +108,7 @@
    <string>VstBoard</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../resources/resources.qrc">
+   <iconset>
     <normaloff>:/vstboard32_8.png</normaloff>:/vstboard32_8.png</iconset>
   </property>
   <property name="locale">
@@ -593,7 +593,7 @@
   </widget>
   <widget class="QDockWidget" name="dockVstBrowser">
    <property name="windowTitle">
-    <string>Vst Plugins</string>
+    <string>VST Plugins</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
@@ -845,9 +845,30 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QDockWidget" name="dockBankBrowser">
+   <property name="windowTitle">
+    <string>VST Banks</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_3">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <property name="margin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="FileBrowser" name="BankBrowser" native="true"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="actionSave">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/filesave.png</normaloff>:/img16x16/filesave.png</iconset>
    </property>
    <property name="text">
@@ -862,7 +883,7 @@
   </action>
   <action name="actionLoad">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/fileopen.png</normaloff>:/img16x16/fileopen.png</iconset>
    </property>
    <property name="text">
@@ -880,7 +901,7 @@
   </action>
   <action name="actionNew">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/filenew.png</normaloff>:/img16x16/filenew.png</iconset>
    </property>
    <property name="text">
@@ -895,7 +916,7 @@
   </action>
   <action name="actionConfig">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/configure.png</normaloff>:/img16x16/configure.png</iconset>
    </property>
    <property name="text">
@@ -921,7 +942,7 @@
   </action>
   <action name="actionDelete">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/delete.png</normaloff>:/img16x16/delete.png</iconset>
    </property>
    <property name="text">
@@ -933,7 +954,7 @@
   </action>
   <action name="actionSave_Setup">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/filesave.png</normaloff>:/img16x16/filesave.png</iconset>
    </property>
    <property name="text">
@@ -948,7 +969,7 @@
   </action>
   <action name="actionNew_Setup">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/filenew.png</normaloff>:/img16x16/filenew.png</iconset>
    </property>
    <property name="text">
@@ -969,7 +990,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/file_setup.png</normaloff>:/img16x16/file_setup.png</iconset>
    </property>
    <property name="text">
@@ -984,7 +1005,7 @@
   </action>
   <action name="actionAbout">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/documentinfo.png</normaloff>:/img16x16/documentinfo.png</iconset>
    </property>
    <property name="text">
@@ -996,7 +1017,7 @@
   </action>
   <action name="actionSave_Project_As">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/filesaveas.png</normaloff>:/img16x16/filesaveas.png</iconset>
    </property>
    <property name="text">
@@ -1011,7 +1032,7 @@
   </action>
   <action name="actionSave_Setup_As">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/filesaveas.png</normaloff>:/img16x16/filesaveas.png</iconset>
    </property>
    <property name="text">
@@ -1032,7 +1053,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/file_setup.png</normaloff>:/img16x16/file_setup.png</iconset>
    </property>
    <property name="text">
@@ -1056,7 +1077,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/file_setup.png</normaloff>:/img16x16/file_setup.png</iconset>
    </property>
    <property name="text">
@@ -1108,7 +1129,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/file_setup.png</normaloff>:/img16x16/file_setup.png</iconset>
    </property>
    <property name="text">
@@ -1117,7 +1138,7 @@
   </action>
   <action name="actionLoad_Setup">
    <property name="icon">
-    <iconset resource="../resources/resources.qrc">
+    <iconset>
      <normaloff>:/img16x16/fileopen.png</normaloff>:/img16x16/fileopen.png</iconset>
    </property>
    <property name="text">
@@ -1159,9 +1180,7 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../resources/resources.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>actionHost_panel</sender>
