--- a/src/common/views/configdialog.ui
+++ b/src/common/views/configdialog.ui
@@ -216,7 +216,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="3" column="1" rowspan="2">
     <widget class="QGroupBox" name="groupSampleFormat">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
@@ -268,7 +268,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="2">
+   <item row="3" column="2" rowspan="2">
     <widget class="QGroupBox" name="groupBox_3">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
@@ -307,7 +307,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="4">
+   <item row="4" column="4">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -323,7 +323,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="3">
+   <item row="4" column="3">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -335,6 +335,13 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="3" column="4">
+    <widget class="QPushButton" name="BtColors">
+     <property name="text">
+      <string>Colors</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
