use getSystemInfo, removed threads from config dialog
Signed-off-by: CtrlBrk <ctrlbrk76@gmail.com>

--- a/src/common/views/configdialog.ui
+++ b/src/common/views/configdialog.ui
@@ -336,41 +336,11 @@
      </property>
     </spacer>
    </item>
-   <item row="3" column="4">
-    <widget class="QGroupBox" name="groupBox_2">
-     <property name="title">
-      <string>Engine</string>
-     </property>
-     <layout class="QFormLayout" name="formLayout_3">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Threads</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QSpinBox" name="nbThreads">
-        <property name="minimum">
-         <number>1</number>
-        </property>
-        <property name="maximum">
-         <number>64</number>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
-   </item>
   </layout>
  </widget>
  <resources>
+  <include location="../../resources/resources.qrc"/>
+  <include location="../../resources/resources.qrc"/>
   <include location="../../resources/resources.qrc"/>
  </resources>
  <connections>
