--- a/src/common/mainwindow.ui
+++ b/src/common/mainwindow.ui
@@ -454,6 +454,9 @@
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
+   <property name="windowTitle">
+    <string>Toolbar</string>
+   </property>
    <attribute name="toolBarArea">
     <enum>TopToolBarArea</enum>
    </attribute>
@@ -556,6 +559,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="contextMenuPolicy">
+        <enum>Qt::ActionsContextMenu</enum>
+       </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
        </property>
@@ -641,12 +647,15 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="QTreeView" name="treeAudioInterfaces">
+      <widget class="ListAudioDevicesView" name="treeAudioInterfaces">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="contextMenuPolicy">
+        <enum>Qt::CustomContextMenu</enum>
        </property>
        <property name="frameShape">
         <enum>QFrame::NoFrame</enum>
@@ -1205,6 +1214,11 @@
    <extends>QWidget</extends>
    <header>views/programlist.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ListAudioDevicesView</class>
+   <extends>QTreeView</extends>
+   <header>views/listaudiodevicesview.h</header>
   </customwidget>
  </customwidgets>
  <resources>
