keyboard shorcuts and context menu on pins and cursors a bit of cleanup in pins creation and visibility

--- a/src/resources/resources.qrc
+++ b/src/resources/resources.qrc
@@ -29,5 +29,6 @@
         <file>translations/common_fr.qm</file>
         <file>translations/vstdll_fr.qm</file>
         <file>img16x16/appearance.png</file>
+        <file>img16x16/editcut.png</file>
     </qresource>
 </RCC>
